libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_empty.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Empty input (invalid)
expression: ""
info:
  kind: Err
---
^
invalid identifier
