libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_unclosed_backtick.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Unclosed backtick (invalid)
expression: "`unclosed"
info:
  kind: Err
---
`unclosed
 ^
invalid identifier
expected http(s) url with trailing `/`
