libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_unclosed_backtick_url.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Unclosed backtick in URL (invalid)
expression: "`https://example.com/"
info:
  kind: Err
---
`https://example.com/
                     ^
invalid identifier
expected '`'
