libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_url_malformed.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Malformed URL (invalid)
expression: "`http:///invalid/`"
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "http:///invalid/",
    ),
    kind: BaseUrl,
}
