libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_url_no_trailing_slash.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: URL without trailing slash (invalid)
expression: "`https://example.com`"
info:
  kind: Err
---
`https://example.com`
 ^
invalid identifier
expected http(s) url with trailing `/`
