libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_url_not_http.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Non-HTTP/HTTPS URL (invalid)
expression: "`ftp://example.com/`"
info:
  kind: Err
---
`ftp://example.com/`
 ^
invalid identifier
expected http(s) url with trailing `/`
