libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__invalid_whitespace.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Whitespace only (invalid)
expression: "   "
info:
  kind: Err
---
   
^
