libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__lexical_basic.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Basic lexical identifier
expression: hello
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    value: Symbol(
        "hello",
    ),
    kind: Lexical,
}
