libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__lexical_mixed_case.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Lexical identifier with mixed case
expression: HelloWorld
info:
  kind: Ok
---
Ident {
    span: SpanId(
        1,
    ),
    name: Symbol(
        "HelloWorld",
    ),
    kind: Lexical,
}
