libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__ident__tests__lexical_with_trailing.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/ident.rs
description: Lexical identifier with trailing content
expression: hello_world after
info:
  kind: Err
---
hello_world after
           ^
